Handle no job in getMarkupResultsFiltered().